--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>3.2.12.RELEASE</spring.version>
+    <docker.registry>192.168.3.253:5000/library</docker.registry>
+    <tag>v2</tag>
   </properties>
 
   <dependencies>
@@ -209,6 +211,18 @@
       <artifactId>blade-kit</artifactId>
       <version>1.3.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity</artifactId>
+      <version>1.7</version>
+    </dependency>
+    <!-- velocity tools -->
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity-tools</artifactId>
+      <version>2.0</version>
+    </dependency>
+
 
   </dependencies>
   <build>
@@ -256,7 +270,35 @@
           <path>/</path>
         </configuration>
       </plugin>
-
+      <!--<plugin>-->
+        <!--<groupId>com.spotify</groupId>-->
+        <!--<artifactId>docker-maven-plugin</artifactId>-->
+        <!--<version>0.4.11</version>-->
+        <!--<executions>-->
+          <!--<execution>-->
+            <!--<id>build-image</id>-->
+            <!--<phase>package</phase>-->
+            <!--<goals>-->
+              <!--<goal>build</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+              <!--<dockerDirectory>${project.basedir}</dockerDirectory>-->
+              <!--<imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>-->
+            <!--</configuration>-->
+          <!--</execution>-->
+          <!--<execution>-->
+            <!--<id>push-image</id>-->
+            <!--<phase>deploy</phase>-->
+            <!--<goals>-->
+              <!--<goal>push</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+              <!--<serverId>harbor</serverId>-->
+              <!--<imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>-->
+            <!--</configuration>-->
+          <!--</execution>-->
+        <!--</executions>-->
+      <!--</plugin>-->
     </plugins>
   </build>
 
