--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>3.2.12.RELEASE</spring.version>
     <docker.registry>192.168.3.253:5000/library</docker.registry>
-    <tag>v2</tag>
+    <tag>v1</tag>
   </properties>
 
   <dependencies>
@@ -270,35 +270,35 @@
           <path>/</path>
         </configuration>
       </plugin>
-      <!--<plugin>-->
-        <!--<groupId>com.spotify</groupId>-->
-        <!--<artifactId>docker-maven-plugin</artifactId>-->
-        <!--<version>0.4.11</version>-->
-        <!--<executions>-->
-          <!--<execution>-->
-            <!--<id>build-image</id>-->
-            <!--<phase>package</phase>-->
-            <!--<goals>-->
-              <!--<goal>build</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-              <!--<dockerDirectory>${project.basedir}</dockerDirectory>-->
-              <!--<imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>-->
-            <!--</configuration>-->
-          <!--</execution>-->
-          <!--<execution>-->
-            <!--<id>push-image</id>-->
-            <!--<phase>deploy</phase>-->
-            <!--<goals>-->
-              <!--<goal>push</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-              <!--<serverId>harbor</serverId>-->
-              <!--<imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>-->
-            <!--</configuration>-->
-          <!--</execution>-->
-        <!--</executions>-->
-      <!--</plugin>-->
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <version>0.4.11</version>
+        <executions>
+          <execution>
+            <id>build-image</id>
+            <phase>package</phase>
+            <goals>
+              <goal>build</goal>
+            </goals>
+            <configuration>
+              <dockerDirectory>${project.basedir}</dockerDirectory>
+              <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
+            </configuration>
+          </execution>
+          <execution>
+            <id>push-image</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>push</goal>
+            </goals>
+            <configuration>
+              <serverId>luwei</serverId>
+              <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
