--- a/pom.xml
+++ b/pom.xml
@@ -286,18 +286,25 @@
               <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
             </configuration>
           </execution>
-          <execution>
-            <id>push-image</id>
-            <phase>deploy</phase>
-            <goals>
-              <goal>push</goal>
-            </goals>
-            <configuration>
-              <serverId>luwei</serverId>
-              <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
-            </configuration>
-          </execution>
+          <!--<execution>-->
+            <!--<id>push-image</id>-->
+            <!--<phase>deploy</phase>-->
+            <!--<goals>-->
+              <!--<goal>push</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+              <!--<serverId>luwei</serverId>-->
+              <!--<imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>-->
+            <!--</configuration>-->
+          <!--</execution>-->
         </executions>
+        <configuration>
+          <dockerDirectory>${project.basedir}</dockerDirectory>
+          <pushImage>true</pushImage>
+          <imageName>
+            ${docker.registry}/${project.artifactId}:${tag}
+          </imageName>
+        </configuration>
       </plugin>
     </plugins>
   </build>
