--- a/pom.xml
+++ b/pom.xml
@@ -274,37 +274,16 @@
         <groupId>com.spotify</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <version>0.4.11</version>
-        <executions>
-          <execution>
-            <id>build-image</id>
-            <phase>package</phase>
-            <goals>
-              <goal>build</goal>
-            </goals>
-            <configuration>
-              <dockerDirectory>${project.basedir}</dockerDirectory>
-              <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
-            </configuration>
-          </execution>
-          <!--<execution>-->
-            <!--<id>push-image</id>-->
-            <!--<phase>deploy</phase>-->
-            <!--<goals>-->
-              <!--<goal>push</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-              <!--<serverId>luwei</serverId>-->
-              <!--<imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>-->
-            <!--</configuration>-->
-          <!--</execution>-->
-        </executions>
         <configuration>
+          <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
           <dockerDirectory>${project.basedir}</dockerDirectory>
           <pushImage>true</pushImage>
-          <serverId>luwei</serverId>
-          <imageName>
-            ${docker.registry}/${project.artifactId}:${tag}
-          </imageName>
+          <resources>
+            <resource>
+              <serverId>luwei</serverId>
+              <directory>${project.build.directory}</directory>
+            </resource>
+          </resources>
         </configuration>
       </plugin>
     </plugins>
