--- a/pom.xml
+++ b/pom.xml
@@ -273,13 +273,26 @@
       <plugin>
         <groupId>com.spotify</groupId>
         <artifactId>docker-maven-plugin</artifactId>
-        <version>0.4.11</version>
+        <version>0.4.13</version>
+        <executions>
+        <execution>
+          <id>build-image</id>
+          <phase>package</phase>
+          <goals>
+            <goal>build</goal>
+          </goals>
+          <configuration>
+            <serverId>luwei</serverId>
+            <dockerDirectory>${project.basedir}</dockerDirectory>
+            <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
+          </configuration>
+        </execution>
+        </executions>
         <configuration>
+          <serverId>luwei</serverId>
           <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
           <dockerDirectory>${project.basedir}</dockerDirectory>
           <pushImage>true</pushImage>
-
-          <serverId>luwei</serverId>
           <resources>
             <resource>
               <directory>${project.build.directory}</directory>
