--- a/pom.xml
+++ b/pom.xml
@@ -282,23 +282,33 @@
             <goal>build</goal>
           </goals>
           <configuration>
-            <serverId>luwei</serverId>
             <dockerDirectory>${project.basedir}</dockerDirectory>
             <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
           </configuration>
         </execution>
+          <execution>
+            <id>push-image</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>push</goal>
+            </goals>
+            <configuration>
+              <serverId>luwei</serverId>
+              <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
+            </configuration>
+          </execution>
         </executions>
-        <configuration>
-          <serverId>luwei</serverId>
-          <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
-          <dockerDirectory>${project.basedir}</dockerDirectory>
-          <pushImage>true</pushImage>
-          <resources>
-            <resource>
-              <directory>${project.build.directory}</directory>
-            </resource>
-          </resources>
-        </configuration>
+        <!--<configuration>-->
+          <!--<serverId>luwei</serverId>-->
+          <!--<imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>-->
+          <!--<dockerDirectory>${project.basedir}</dockerDirectory>-->
+          <!--<pushImage>true</pushImage>-->
+          <!--<resources>-->
+            <!--<resource>-->
+              <!--<directory>${project.build.directory}</directory>-->
+            <!--</resource>-->
+          <!--</resources>-->
+        <!--</configuration>-->
       </plugin>
     </plugins>
   </build>
