--- a/pom.xml
+++ b/pom.xml
@@ -276,12 +276,14 @@
         <version>0.4.13</version>
         <executions>
         <execution>
+          <id>build-image</id>
           <phase>package</phase>
           <goals>
             <goal>build</goal>
           </goals>
         </execution>
           <execution>
+            <id>push-image</id>
             <phase>deploy</phase>
             <goals>
               <goal>push</goal>
