--- a/pom.xml
+++ b/pom.xml
@@ -273,28 +273,34 @@
       <plugin>
         <groupId>com.spotify</groupId>
         <artifactId>docker-maven-plugin</artifactId>
-        <version>0.4.13</version>
+        <version>0.4.11</version>
         <executions>
-        <execution>
-          <id>build-image</id>
-          <phase>package</phase>
-          <goals>
-            <goal>build</goal>
-          </goals>
-        </execution>
+          <execution>
+            <id>build-image</id>
+            <phase>package</phase>
+            <goals>
+              <goal>build</goal>
+            </goals>
+            <configuration>
+              <serverId>luwei</serverId>
+              <registryUrl>${docker.registry}</registryUrl>
+              <dockerDirectory>${project.basedir}</dockerDirectory>
+              <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
+            </configuration>
+          </execution>
           <execution>
             <id>push-image</id>
             <phase>deploy</phase>
             <goals>
               <goal>push</goal>
             </goals>
+            <configuration>
+              <serverId>luwei</serverId>
+              <registryUrl>${docker.registry}</registryUrl>
+              <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
+            </configuration>
           </execution>
         </executions>
-        <configuration>
-          <serverId>luwei</serverId>
-          <imageName>${docker.registry}/${project.artifactId}:${tag}</imageName>
-          <dockerDirectory>${project.basedir}</dockerDirectory>
-        </configuration>
       </plugin>
     </plugins>
   </build>
